--- a/Style/style.css
+++ b/Style/style.css
@@ -17,6 +17,29 @@
 }
 /* End Include Raleway Font*/
 /*Start Images Background Style*/
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+	background-color: #3D3D3D;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #FFF;
+	background-image: -webkit-gradient(linear,
+									   40% 0%,
+									   75% 84%,
+									   from(black),
+									   to(black),
+									   color-stop(.6,black))
+}
 #backgroundColor{
   position: fixed;
   width: 100%;
@@ -29,7 +52,7 @@
   background: url('../Images/backgroundWaveTop.png');
   opacity: 0.7;
   position: fixed;
-  z-index: 18;
+  z-index: 0;
   top: 57px;
   right: 0;
   width: 88%;
@@ -42,7 +65,7 @@
 #backgroundWaveBottom{
   opacity: 0.7;
   position: fixed;
-  z-index: 18;
+  z-index: 0;
   top: 64px;
   right: 0;
   width: 100%;
@@ -53,7 +76,7 @@
 #backgroundWaveBottomLeft{
   opacity: 0.7;
   position: fixed;
-  z-index: 18;
+  z-index: 0;
   top: 60px;
   left: 0;
   width: 100%;
@@ -75,6 +98,7 @@ a:hover{
 /*=======> start Style header <==========*/
 header{
   position: fixed;
+  top:0;
   width: 100%;
   z-index: 100;
   background-color: #1B1B1B;
@@ -87,8 +111,10 @@ header{
 
 }
 header nav{
-  padding-left:10px !important;
-  padding-right:10px;
+  /* padding-left:10px !important;
+  padding-right:10px; */
+  width: 95%;
+  margin:0 auto;
 }
 header nav .leftNav .ImageLogo img{
   width: 40px;
@@ -193,3 +219,76 @@ header nav .RightNav ul li a p{
   text-transform: capitalize;
 }
 /*=======> End Style header <==========*/
+/* Start Section Home */
+section{
+  position: relative;
+  width: 90%;
+  margin: 140px auto 0;
+  height: 100vh;
+}
+section .MarkLine{
+  position: relative;
+  top: -10px;
+  height: inherit;
+  transform: rotateY(0);
+  transition: all 0.5s ease-in-out;
+}
+section .MarkLine .line{
+  height: inherit;
+  width: 2px;
+  background-color: #F5B819;
+  position: absolute;
+  left: 0;
+  top:0;
+}
+section .MarkLine .smallLine{
+  height: 2px;
+  width: 40px;
+  background-color: #F5B819;
+  position: absolute;
+  left: 0;
+  top:0;
+}
+section .MarkLine .circle{
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  background-color: #F4B719;
+  border-radius: 50%;
+  top: -4px;
+  left: 40px;
+}
+.activeAnton{
+  transform: rotateY(180deg) !important;
+}
+section .ContainerText{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  padding: 0 20px; 
+}
+section .ContainerText .LineBetText{
+  height: 3px;
+  width: 70%;
+  background-color: #F5B819;
+}
+section  .ContainerText .TextChange{
+  position: relative;
+  z-index: 18;
+  color: #FFF;
+  width: 10%;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 23px;
+  text-transform: capitalize;
+  transition: all 0.5s ease-in-out;
+}
+section .ContainerText .ActiveText{
+  color: #F5B819;
+  font-size: 50px;
+  width: 15%;
+}
