--- a/Style/style.css
+++ b/Style/style.css
@@ -16,7 +16,7 @@
   align-items: center;
 }
 /* End Include Raleway Font*/
-/*Start Images Background Style*/
+/*Start Style main Scrollbar*/
 ::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
@@ -40,6 +40,8 @@
 									   to(black),
 									   color-stop(.6,black))
 }
+/*End Style scrollbar*/
+/*Start Images Background Style*/
 #backgroundColor{
   position: fixed;
   width: 100%;
@@ -111,8 +113,6 @@ header{
 
 }
 header nav{
-  /* padding-left:10px !important;
-  padding-right:10px; */
   width: 95%;
   margin:0 auto;
 }
@@ -226,42 +226,6 @@ header nav .RightNav ul li a p{
   margin: 140px auto 0;
   height: 100vh;
 }
-section.SectionKero .MarkLine{
-  position: relative;
-  top: -10px;
-  height: inherit;
-  transform: rotateY(0);
-  transition: all 0.5s ease-in-out;
-}
-section.SectionKero .MarkLine .line{
-  height: inherit;
-  width: 2px;
-  background-color: #F5B819;
-  position: absolute;
-  left: 0;
-  top:0;
-}
-section.SectionKero .MarkLine .smallLine{
-  height: 2px;
-  width: 40px;
-  background-color: #F5B819;
-  position: absolute;
-  left: 0;
-  top:0;
-}
-section.SectionKero .MarkLine .circle{
-  position: absolute;
-  height: 10px;
-  width: 10px;
-  background-color: #F4B719;
-  border-radius: 50%;
-  top: -4px;
-  left: 40px;
-}
-.activeAnton{
-  transform: rotateY(180deg) !important;
-  right: -20px;
-}
 section.SectionKero .ContainerText{
   display: flex;
   justify-content: space-evenly;
@@ -294,15 +258,60 @@ section.SectionKero .ContainerText .ActiveText{
   color: #F5B819;
   font-size: 50px;
 }
-
+section.SectionKero .MarkLine{
+  position: relative;
+  top: -10px;
+  height: inherit;
+  transform: rotateY(0);
+  transition: all 0.5s ease-in-out;
+}
+section.SectionKero .MarkLine.activeAnton{
+  transform: rotateY(180deg) !important;
+  right: -20px;
+}
+section.SectionKero .MarkLine .line{
+  height: inherit;
+  width: 2px;
+  background-color: #F5B819;
+  position: absolute;
+  left: 0;
+  top:0;
+}
+section.SectionKero .MarkLine .smallLine{
+  height: 2px;
+  width: 40px;
+  background-color: #F5B819;
+  position: absolute;
+  left: 0;
+  top:0;
+}
+section.SectionKero .MarkLine .circle{
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  background-color: #F4B719;
+  border-radius: 50%;
+  top: -4px;
+  left: 40px;
+}
+/*End Section Lines and Text */
+/*Start Style card*/
+#News{
+  display: block;
+}
+#Events{
+  display: none;
+}
 .cards{
+  width: inherit;
   position: absolute;
   top: 50px;
   left: 60px;
-  width: 99%;
-  display: flex;
 }
-.cardChild{
+.cards .keroCard{
+  margin-bottom: 20px;
+}
+.cards .keroCard .cardChild{
   border-radius: 10px;
   background: linear-gradient(319deg, rgba(0, 0, 0, 0.00) 0%, rgba(245, 184, 25, 0.56) 100%);
   box-shadow: 6px 11px 9px 9px rgba(0, 0, 0, 0.25);
@@ -311,20 +320,20 @@ section.SectionKero .ContainerText .ActiveText{
   padding :20px 10px;
   overflow: hidden;
 }
-.TopCard{
+.cards .keroCard .cardChild .TopCard{
   display: flex;
   justify-content: space-between;
 }
-.ImageCard{
+.cards .keroCard .cardChild .TopCard .ImageCard{
   width: 50%;
 }
-.ImageCard img{
+.cards .keroCard .cardChild .TopCard .ImageCard img{
   width: 100%;
 }
-.textCard{
+.cards .keroCard .cardChild .TopCard .textCard{
   width: 45%;
 }
-.textCard p{
+.cards .keroCard .cardChild .TopCard .textCard p{
   color: #FFF;
   text-align: center;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -335,13 +344,13 @@ section.SectionKero .ContainerText .ActiveText{
   line-height: 23px;
   text-transform: capitalize;
 }
-.bottomCard{
+.cards .keroCard .cardChild .bottomCard{
   padding:10px;
   border-radius: 10px;
   background: #D9D9D9;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.bottomCard .headerInfo h3{
+.cards .keroCard .cardChild .bottomCard .headerInfo h3{
   color: rgba(0, 0, 0, 0.57);
   font-family: Raleway;
   font-size: 23px;
@@ -350,12 +359,12 @@ section.SectionKero .ContainerText .ActiveText{
   line-height: 23px;
   text-transform: capitalize;
 }
-.bottomCard .button{
+.cards .keroCard .cardChild .bottomCard .button{
   width: 98%;
   display: flex;
   justify-content: flex-end;
 }
-.bottomCard .button button,.Description .button button{
+.cards .keroCard .cardChild .bottomCard .button button,.Description .button button{
   background: #000;
   color: #FFF;
   text-align: center;
@@ -369,14 +378,7 @@ section.SectionKero .ContainerText .ActiveText{
   padding: 0 15px;
   transition: all 0.5s ease-in-out;
 }
-.Description .button button {
-  position: absolute;
-  bottom:30px;
-  right: 20px;
-  transform: translateX(-450px);
-  transition: all 2s ease-in-out;
-}
-.Description{
+.cards .keroCard .Description{
   display: none;
   position: relative;
   padding:15px;
@@ -388,8 +390,7 @@ section.SectionKero .ContainerText .ActiveText{
   animation-duration:2s ;
   transition:all 2s ease-in-out;
 }
-.Description .headerDes h3{
-
+.cards .keroCard .Description .headerDes h3{
   color: rgba(0, 0, 0, 0.81);
   text-align: center;
   font-family: Raleway;
@@ -400,15 +401,30 @@ section.SectionKero .ContainerText .ActiveText{
   text-transform: capitalize;
 
 }
-.keroCard{
-  margin-bottom: 20px;
+.cards .keroCard .Description .button button.odd{
+  transform: translateX(-450px);
 }
+.cards .keroCard .Description .button button.even{
+  transform: translateX(108px);
+}
+.cards .keroCard .Description .button button{
+  position: absolute;
+  bottom:30px;
+  right: 20px;
+  transition: all 2s ease-in-out;
+}
+/*Start Animation */
 .ActiveKeroCardRight{
-  border-top-right-radius:0px;
-  border-bottom-right-radius:0px;
+  border-radius: 13px  0  0 13px !important;
+}
+.activeDecsription{
+  border-radius: 13px 0 0 13px !important;
 }
 .ActiveKeroCardLeft{
-  border-top-left-radius:0px;
+    border-radius: 0 13px 13px 0  !important;
+}
+.ActiveKeroCardBottom{
+  border-bottom-right-radius:0px;
   border-bottom-left-radius:0px;
 }
 .ActiveButtonRight{
@@ -416,6 +432,9 @@ section.SectionKero .ContainerText .ActiveText{
 }
 .ActiveButtonLeft{
   transform: translateX(0px) !important;
+}
+.HideButtonLeft{
+  transform: translateX(-650px);
 }
 .AntonHideLeftSide{
   opacity: 0;
@@ -429,3 +448,6 @@ section.SectionKero .ContainerText .ActiveText{
       opacity: 1;
   }
 }
+/*End Animation */
+
+/*End Style card*/
