--- a/Style/Responsive.css
+++ b/Style/Responsive.css
@@ -53,6 +53,10 @@
   .activeAnton .circle{
     left: 60px !important;
   }
+  .textCard{
+    width: min-content !important;
+    text-align: center;
+  }
 }
 @media (max-width :550px) {
   .TopCard{
