--- a/Style/Responsive.css
+++ b/Style/Responsive.css
@@ -1,35 +1,32 @@
-/* @media screen and (max-width:1220px ) {
-  .LineBetText{
-    width: 50% !important;
-  }
-  
-}
-@media screen and (max-width:990px ) {
-  .activeAnton{
-    right: -45px;
-  }
-  nav{
-    justify-content: center !important;
+@media (min-width:995px) and (max-width:1226px){
+  .textCard{
+    width: min-content !important;
   }
 }
-@media screen and (max-width:750px ) {
-  .LineBetText{
-    width: 50% !important;
+@media (max-width:991px) {
+  .Description{
+    border-radius: 0px 0px 13px 13px !important;
+    padding-bottom: 35px !important;
   }
-  .container{
-    width: 99% !important;
-    max-width: 99% !important;
-    margin-left:5px !important;
-    margin-right:5px !important;
+  .cards{
+    left:50px !important;
   }
-  nav{
-    justify-content: center !important;
+  .Description .button button{
+    bottom:15px !important;
   }
-} */
+}
 @media (max-width:600px) {
   .SectionKero{
     margin-left: 0 !important;
     margin-right: 0 !important;
+  }
+  section  .ContainerText .TextChange{
+    font-size: 15px !important;
+    padding-left: 20px !important;
+    padding-right: 30px  !important;
+  }
+  section .ContainerText .ActiveText{
+    font-size: 30px !important;
   }
   .TextChange:nth-child(1){
     padding:0 0 0 45px !important;
@@ -58,6 +55,11 @@
     text-align: center;
   }
 }
+@media (min-width: 576px){
+  .SectionKero{
+    max-width: 95% !important;
+  }
+}
 @media (max-width :550px) {
   .TopCard{
     flex-direction: column;
@@ -72,35 +74,6 @@
     width: 95%;
   }
 }
-@media (max-width:380px) {
 
-}
-@media (min-width:995px) and (max-width:1226px){
-  .textCard{
-    width: min-content !important;
-  }
-}
-@media (min-width: 576px){
-  .SectionKero{
-    max-width: 95% !important;
-  }
-}
-@media screen and (max-width:600px) {
-  section  .ContainerText .TextChange{
-    font-size: 15px !important;
-    padding-left: 20px !important;
-    padding-right: 30px  !important;
-  }
-  section .ContainerText .ActiveText{
-    font-size: 30px !important;
-  }
-}
-@media (max-width:991px) {
-  .Description{
-    border-radius: 0px 0px 13px 13px !important;
-    padding-bottom: 35px !important;
-  }
-  .Description .button button{
-    bottom:15px !important;
-  }
-}
+
+
