--- a/Style/Responsive.css
+++ b/Style/Responsive.css
@@ -3,6 +3,14 @@
     width: min-content !important;
   }
 }
+@media  (max-width:1290px) {
+  header .CommitteeSection ul{
+    width: 99% !important; 
+  }
+  header nav .RightNav ul li{
+    margin: 0 15px !important;
+  }
+}
 @media (max-width:991px) {
   .Description{
     border-radius: 0px 0px 13px 13px !important;
