--- a/Style/AboutStyle.css
+++ b/Style/AboutStyle.css
@@ -2,6 +2,7 @@
     z-index: 36;
     position: absolute;
     width: 100%;
+    top: 100px;
     
 }
 
@@ -154,6 +155,7 @@
     padding: 12px;
     height: 45px;
     border-radius: 5px;
+    display: none;
 
 }
 
@@ -179,4 +181,13 @@
     background-color: #3e3e3e;
     color: orange;
 
+}
+
+@media (max-width:993px){
+    .RightNav{
+        display: none !important;
+    }
+    .toggle-btn{
+        display: flex;
+    }
 }
