--- a/Style/style.css
+++ b/Style/style.css
@@ -494,3 +494,109 @@ section.SectionKero .MarkLine .circle{
 /*End Animation */
 
 /*End Style card*/
+
+
+/* MenuStyle */
+
+.side-menu {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  flex-direction: column;
+  top: 10px;
+  right: -280px;
+  width: 250px;
+  height: 99vh;
+  background-color: #1b1b1b;
+  color: #fff;
+  transition: right 0.3s ease;
+
+  /* box-shadow: 0px 4px 17px 8px rgba(0, 0, 0, 0.69); */
+
+}
+
+.toggle-btn span{
+  transition: all .2s ease-in-out;
+}
+.ActiveMenu span:nth-child(2){
+  transform: translateX(200%);
+}
+
+.ActiveMenu span:nth-child(1){
+  transform: rotate(45deg) translateY(13px);
+}
+.ActiveMenu span:nth-child(3){
+  transform: rotate(-45deg) translateY(-13px);
+}
+.SocialIcons{
+  display: flex;justify-content: center;align-items: center;
+}
+.SocialIcons li svg{
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+
+.SocialIcons li:hover svg{
+  color: orange;
+}
+.side-menu.open {
+  right: 0;
+}
+
+.toggle-btn {
+  position: fixed;
+  top: 8px;
+  right: 10px;
+  overflow: hidden;
+  z-index: 1;
+  cursor: pointer;
+  background-color: #1b1b1b;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 20px;
+  width: 45px;
+  padding: 12px;
+  height: 45px;
+  border-radius: 5px;
+  display: none;
+
+}
+
+.toggle-btn span {
+  background-color: #fff;
+  height: 3px;
+  width: 100%;
+  display: block;
+}
+.SideMenuList{
+  width: 100%;
+  margin-top: 30%;
+}
+.SideMenuList li a{
+  background-color: #201f1f;
+  /* border-radius: 0; */
+  color: #fff;
+  width: 100%;
+  margin-bottom: 2px;
+  transition: all .2s ease-in-out;
+}
+.SideMenuList li a:hover{
+  background-color: #3e3e3e;
+  color: orange;
+
+}
+
+@media (max-width:993px){
+  .RightNav{
+      display: none !important;
+  }
+  .toggle-btn{
+      display: flex;
+  }
+}
