--- a/Style/AboutStyle.css
+++ b/Style/AboutStyle.css
@@ -194,9 +194,11 @@
 }
 
 .AntonCards{
+    position: absolute !important;
     margin-left: auto;
     margin-right: auto;
-    transition: all .5s ease-in-out;    
+    transition: all .5s ease-in-out; 
+    left: 90px;
 }
 
 .AntonCardsActive{
@@ -221,4 +223,43 @@
     z-index: 29;
     transform:translateX(0%)  ;
 }
-
+img{
+    border-radius: 20px !important;
+}
+.card{
+    background-color: transparent !important;
+    border:none !important;
+}
+@media(max-width:991px){
+    .description{
+        order: 2 !important;
+    }
+    .description .row .col-lg-5 {
+        height: min-content 
+        
+    }
+    .DescriptionImage{
+        border: none;
+        align-items: center;
+        height: 100%;
+        background-color: transparent !important;
+    }
+    .DescriptionImage img{
+        max-width: 80%;
+        max-height: 80%
+    }
+}
+@media (min-width:560px) and (max-width:991px){
+    .DescriptionImage{
+        align-items: center;
+    }
+    .DescriptionImage img{
+        max-width: 50%;
+        max-height: 50%
+    }
+}
+@media(max-width:485px){
+    .AntonCards{
+        left: 50px;
+    }
+}
