--- a/Style/AboutStyle.css
+++ b/Style/AboutStyle.css
@@ -199,6 +199,9 @@
     margin-right: auto;
     transition: all .5s ease-in-out; 
     left: 90px;
+    width: 70%;
+    background-color: transparent;
+    border:none;
 }
 
 .AntonCardsActive{
@@ -230,6 +233,72 @@ img{
     background-color: transparent !important;
     border:none !important;
 }
+
+.DescriptionText{
+    color: #FFF;
+    z-index: 30;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 800;
+    line-height:20px; 
+    letter-spacing: 0.5px;
+    text-transform: capitalize;
+}
+.MainSectionCards{
+    position: relative;
+    height: 465px;
+    display: flex;
+    align-items: center;
+}
+.HighBoardHeader{
+    padding-top: 0;
+    padding-bottom: 0 !important;
+    padding-left: 10px;
+    color:#EDB31F;
+    font-family: Slant;
+    letter-spacing:1.5px;
+    padding-bottom: 35px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.description{
+    display: none;    
+    animation-name: OpacityAnimation;
+    animation-duration: 2s;
+}
+footer span{
+    font-family: Raleway;
+    font-size: 14px;
+    color: #FFF;
+    display: block;
+    position: relative;
+    width: 100%;
+    z-index: 35;
+    margin-bottom: 4px;
+    text-align: center;
+}
+
+footer{
+    margin-top: 20px;
+}
+footer div ul li{
+    z-index: 30;
+}
+footer div ul li a{
+    text-decoration: none;
+}
+footer div ul li a svg{
+    width: 25px !important;
+    height: 25px !important;
+    color: #fff  !important;
+    transition: all .2s ease-in-out;
+}
+footer div ul li:hover a svg{ 
+    color: #EDB31F  !important;
+}
 @media(max-width:991px){
     .description{
         order: 2 !important;
@@ -248,6 +317,13 @@ img{
         max-width: 80%;
         max-height: 80%
     }
+    .DescriptionText{
+        margin-top: 20px;
+        width: 80%;
+    }
+    .HighBoardHeader{
+        text-align: center;
+    }
 }
 @media (min-width:560px) and (max-width:991px){
     .DescriptionImage{
@@ -256,6 +332,9 @@ img{
     .DescriptionImage img{
         max-width: 50%;
         max-height: 50%
+    }
+    .DescriptionText{
+        width: 50%;
     }
 }
 @media(max-width:485px){
