--- a/Style/AboutStyle.css
+++ b/Style/AboutStyle.css
@@ -346,8 +346,8 @@ footer div ul li:hover a svg{
     transition: all 0.5s ease-in-out;
 }
 .HideSectionDes{
-    transform: scale(0);
+    opacity: 0;
 }
 .ActiveSectionDes{
-    transform: scale(1);
+    opacity: 1;
 }
