--- a/Style/ShareCss.css
+++ b/Style/ShareCss.css
@@ -608,3 +608,7 @@ li:hover .ContainerArrow .Arrow .ArrowLine{
 li.list-item a.btn:focus{
   box-shadow: none;
 }
+
+#SupportLogo{
+  cursor: pointer;
+}
